Trying to fix image center align

--- a/www/_data/css/_materialsearch.sass
+++ b/www/_data/css/_materialsearch.sass
@@ -1,11 +1,8 @@
 // main: style.sass
+img.map-popupitem
+    display: block
+    text-align: center
 
-
-a.map-popup
-    padding-right: 100px
-
-    .map-popup
-        display: block
-        padding-top: 20px
-        width: 300px
-        padding-right: 100px
+.map-popup
+    padding-top: 60px
+    width: 50%
