--- a/www/css/style.css
+++ b/www/css/style.css
@@ -290,15 +290,14 @@ h1 {
     padding-top: 30px;
 }
 
-a.map-popup {
-    padding-right: 100px;
+img.map-popupitem {
+    display: block;
+    text-align: center;
 }
 
-a.map-popup .map-popup {
-    display: block;
-    padding-top: 20px;
-    width: 300px;
-    padding-right: 100px;
+.map-popup {
+    padding-top: 60px;
+    width: 50%;
 }
 
 #title2 {
